# claude-vector-memory

./: .gitignore  README.md  install-and-rebuild-all.sh  pyproject.toml  setup-memory-sync-cron.sh  sync-all-memory.sh
examples/: multi_agent.py  openclaw_hook.sh  openclaw_integration.py  single_agent.py
src/claude_vector_memory/: __init__.py  __main__.py  chunking.py  cli.py  embedders.py  index.py
